# binding_project

./: .gitignore  1.xml  2.xml  API_Documentation.md  CHAT_IMPLEMENTATION_SUMMARY.md  CHAT_README.md  CMakeLists.txt  README.md  README_REFACTORED.md  ZRDDS_QOS_PROFILES.xml  ZRDDS模块封装报告.md  build_all_modules.bat  build_module.bat  build_module.ps1  canvas_window.py  chat_example.py  chat_ui.py  chat_with_unified.py  dds_chat.py  end.py  function_manager.py  function_pages.py  main.py  main_ui.py  paint.py  simple_chat.py  snake.py  snake_dds.py  start_two_chats.bat  test_communication.py  test_datawriter_debug.py  test_final_dds_architecture.py  test_integration_pub.py  test_refactored_modules.py  test_unified_dds.py  test_unified_fixed.py  username_dialog.py
ZRDDSGen/doc/: ZRDDSGen用户手册.html
include/CPlusPlusInterface/: BuiltinDataDataReader.h  Condition.h  ContentFilteredTopic.h  DataReader.h  DataReaderListener.h  DataWriter.h  DataWriterListener.h  DomainEntity.h  DomainParticipant.h  DomainParticipantFactory.h  DomainParticipantListener.h  DynamicDataDataReader.h  DynamicDataDataWriter.h  DynamicDataTypeSupport.h  Entity.h  Listener.h  MultiTopic.h  Publisher.h  PublisherListener.h  QueryCondition.h  ReadCondition.h  Subscriber.h  SubscriberListener.h  Topic.h  TopicDescription.h  TopicListener.h  TypeCode.h  TypeSupport.h  WaitSet.h  ZRBuiltinTypesDataReader.h  ZRBuiltinTypesDataWriter.h  ZRBuiltinTypesTypeSupport.h  ZRCPlusPlusSequence.cpp  ZRDDSCppSimpleInterface.h  ZRDDSCppWrapper.h  ZRDDSDataReader.h  ZRDDSDataWriter.h  ZRDDSTypeSupport.cpp  ZRDDSTypeSupport.h
include/Common/ShapeType/: ShapeType.cpp  ShapeType.h  ShapeType.idl  ShapeTypeDataWriter.h  ShapeTypeTypeSupport.cpp
include/Common/ShapeTypeSequence/: ShapeTypeSequence.cpp  ShapeTypeSequence.h  ShapeTypeSequence.idl  ShapeTypeSequenceDataReader.h  ShapeTypeSequenceDataWriter.h  ShapeTypeSequenceTypeSupport.cpp  ShapeTypeSequenceTypeSupport.h
include/ShapeType/: ShapeType.cpp  ShapeType.h  ShapeTypeDataReader.h  ShapeTypeDataWriter.h  ShapeTypeTypeSupport.cpp  ShapeTypeTypeSupport.h
include/ZRDDSCoreInterface/: AsynchronousPublisherQosPolicy.h  BatchQosPolicy.h  BuiltinTopicKey_t.h  CDRStream.h  ContentFilterProperty_t.h  DDSBuiltinSecurityCommon.h  DDSLogQosPolicy.h  DDSMsgStatisticsInfoQosPolicy.h  DDSSecurityPluginQosPolicy.h  DataReaderQos.h  DataReaderReadOrTakeParams.h  DataRepresentationQosPolicy.h  DataTags.h  DataWriterMessageModeQosPolicy.h  DataWriterProtocolQosPolicy.h  DataWriterQos.h  DataWriterResourceLimitsQosPolicy.h  DeadlineQosPolicy.h  DefaultQos.h  DestinationOrderQosPolicy.h  DiscoveryConfigQosPolicy.h  DomainId_t.h  DomainParticipantFactoryQos.h  DomainParticipantQos.h  DurabilityQosPolicy.h  DurabilityServiceQosPolicy.h  Duration_t.h  EntityFactoryQosPolicy.h  GatewayQosPolicy.h  GroupDataQosPolicy.h  HistoryQosPolicy.h  InconsistentTopicStatus.h  InstanceHandle_t.h  InstanceStateKind.h  InstanceStateMask.h  LatencyBudgetQosPolicy.h  LifespanQosPolicy.h  LivelinessChangedStatus.h  LivelinessLostStatus.h  LivelinessQosPolicy.h  (+69 more)
include/ZRDDSSecurityInterface/: AccessControl.h  AccessControlListener.h  Authentication.h  AuthenticationListener.h  CryCommonSource.h  CryptoKeyExchange.h  CryptoKeyFactory.h  CryptoTransform.h
src/: bindings_basic.cpp  bindings_domain.cpp  bindings_listener.cpp  bindings_publish.cpp  bindings_shapetype.cpp  bindings_subscribe.cpp  bindings_topic.cpp  bindings_unified.cpp
v1/: README_perf_separate.md  chat_house4_exact.py  perf_receiver.py  perf_sender.py  shape_publisher.py  shape_subscriber.py
zrpy/: __init__.py  _zrdds_basic.cp313-win_amd64.pyd  _zrdds_domain.cp313-win_amd64.pyd  _zrdds_listener.cp313-win_amd64.pyd  _zrdds_publish.cp313-win_amd64.pyd  _zrdds_shapetype.cp313-win_amd64.pyd  _zrdds_simple.cp313-win_amd64.pyd  _zrdds_subscribe.cp313-win_amd64.pyd  _zrdds_topic.cp313-win_amd64.pyd  _zrdds_unified.cp313-win_amd64.pyd
